2011-07-06    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/proxy.py (Proxy.add_ehr_record): Added
	interface to eav.py

	* tests/bl/vl/kb/test_eav.py: Added.

	* bl/vl/kb/drivers/omero/eav.py: Added.

2011-07-06    <simleo@neuron.crs4.it>

	* bl/vl/app/kb_query/markers.py (Markers): fixed dump_mapping.

	* bl/vl/app/importer/marker_definition.py
	(Recorder.save_snp_marker_definitions.ns): fixed a bug where
	context was also saved as 'release'.

2011-06-04    <zag@manzanillo>

	* bl/vl/kb/drivers/omero/utils.py: created.

2011-05-26    <zag@manzanillo>

	* models/sample/dna_sample.ome.xml: Removed all the nanodrop
	details, they should be provided as a DataResult produced by a
	NanoDrop device.

2011-05-24    <zag@manzanillo>

	* tests/bl/vl/individual/kb/test_ikb.py
	(TestIKB.create_individual_sample_chain): disabled since it was
	using get_root.

	* tests/bl/vl/sample/kb/test_skb_extended.py
	(TestSKBExtended.check_object): disabled. It will not work, since
	we have dropped proxy_indexed.

	* bl/vl/sample/kb/drivers/omero/sample.py (DataSample): patched to
	map label to name. This is a bug in the DataSample model.

	* bl/vl/sample/kb/drivers/omero/wrapper.py (OmeroWrapper.unload):
	Added support for omero object unloading. It is an experiment.

2011-05-23    <zag@manzanillo>

	* bl/vl/sample/kb/drivers/omero/samples_container.py
	(DataCollection.__setup__): label disabled.

	* bl/vl/app/importer/data_collection.py (Recorder.__init__):
	disabled data_collection.label as a temporary measure before we
	sync the server on the new models.

2011-05-21    <zag@manzanillo>

	* bl/vl/app/importer/data_sample.py
	(import_data_sample_implementation): added a default-contrast-qc
	flag.

2011-05-18    <zag@manzanillo>

	* bl/vl/app/importer/data_collection.py (Recorder): moved
	default_study handling to core.

	* bl/vl/sample/kb/drivers/omero/dependency_tree.py
	(DependencyTree): Added as a more general (albeit slower)
	replacement to proxy_index indexing functions.
